--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,11 +1,3 @@
-/*
-#app,
-    #game-wrapper {
-        height: 100vh;
-        width: 100vw;
-    }
-*/
-
 #app,
 #start,
 #game-wrapper {
@@ -13,140 +5,79 @@
 	width: 100vw;
 }
     
-    body {
-        background-color: red;
+    
+body {
+    background-color: red;
         
-    }
+}
     
-    /**
-    **/
-    .hide {
-        display: none !important;
-    }
+.hide {
+    display: none !important;
+}
     
-    #start {
-        display: flex;
-        align-items: center;
-    }
-    
-    #username-form {
-        margin: 0 auto;
-        text-align: center;
-    }
-    /***/
-    
-    #game-wrapper {
-        display: flex;
-    }
-    
-    #game {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        border-right: 1px solid #555;
-    }
-    
-    #game h2 {
-        background-color: rgb(70, 156, 84);
-        padding: 0.5rem 0.75rem;
-        color: white;
-    }
-    
-    #users {
-        flex-basis: 20%;
-    }
-    
-    #users h2 {
-        background-color: rgb(70, 156, 84);
-        padding: 0.5rem 0.75rem;
-        color: white;
-    }
-
-
-/*
-#message-wrapper {
-	flex-grow: 1;
-	overflow-y: scroll;
-	/* height: calc(100vh - 2.25rem - 2px); 
+#start {
+    display: flex;
+    align-items: center;
 }
 
-#messages {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	list-style: none;
-	padding: 0;
+#startGame {
+    border-radius: 20px;
 }
-
-
-#messages .message {
-	background-color: lightgray;
-	border-radius: 0.75rem;
-	margin: 0.1rem;
-	padding: 0.5rem 0.75rem;
-	align-self: flex-start;
+    
+#username-form {
+    margin: 0 auto;
+    text-align: center;
 }
-*/
-/*
-#messages .message.you {
-	background-color: cornflowerblue;
-	color: white;
-	align-self: flex-end;
+    
+#game-wrapper {
+    display: flex;
 }
-
-
-#messages .message .time {
-	font-size: 60%;
-	margin-left: 0.25rem;
+    
+#game {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    border-right: 1px solid #555;
 }
-
-#messages .message .user {
-    display: block;
-	font-weight: 700;
+    
+#game h2 {
+    background-color: black;
+    padding: 0.5rem 0.75rem;
+    color: white;
+    text-align: center;
 }
-
-#messages .notice {
-	color: #555;
-}
-*/
-
+    
 #users {
-	flex-basis: 20%;
+    flex-basis: 20%;
 }
-/*
+    
 #users h2 {
-	background-color: cornflowerblue;
-	padding: 0.5rem 0.75rem;
-	color: white;
+    background-color: black;
+    padding: 0.5rem 0.75rem;
+    color: white;
+    text-align: center;
 }
-*/
+
 #users ul {
 	margin: 0;
 	padding: 0.5rem 0.75rem;
 	list-style: none;
 }
-/*****/
 
 .container {
     display: grid;
     grid-template-columns: 75px 75px 75px 75px 75px 75px 75px 75px;
     grid-template-rows: 75px 75px 75px 75px 75px 75px 75px;
-    /*border: 2px solid pink;*/
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    /*background-image: url("https://drive.google.com/uc?export=download&id=1M42mkJo_ILpyt1penWJLFAGwyycD9oKq");
-    */
-    /*background-repeat: no-repeat;
-    background-size: cover;
-    */
     height: 100vh;
-        /*text-align: center;*/
         
-    }
+}
 
 .scoreboard{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    background-color: grey;
+    background-color: black;
+    color: white;
 
 }
 
